--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,28 @@
 theme: jekyll-theme-cayman
 title: Welcome to Yao Chen's homepage!
+<!DOCTYPE html>
+<html lang="en-US">
+<body>
+    <ul>
+
+        <li class="top">
+            <div>div of li</div>
+        </li>
+
+        <li class="top">
+            <div>
+            <div>div of li's div</div>
+            </div>
+        </li>
+
+        <li>
+        <p>p of li</p>    
+        </li>
+
+        <li>
+        <a>
+        <div id="li_a_div">div of li's a</divid>    
+        </a>    
+        </li>
+    </ul>
+</body>
